<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="75dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/device_name"/>
            <EditText
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:selectAllOnFocus="true"
                android:inputType="text"
                android:maxLines="1"
                android:paddingTop = "5dp"
                android:background="@drawable/rounded_rectangle"
                android:id="@+id/device_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/device_type" />
            <Spinner
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:spinnerMode="dropdown"
                android:id="@+id/device_type"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="75dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/device_ip"/>
            <EditText
                android:digits="1234567890.\n\r"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingTop = "5dp"
                android:text=""
                android:background="@drawable/rounded_rectangle"
                android:id="@+id/inter1"/>
            <EditText
                android:layout_marginLeft="10dp"
                android:digits="1234567890.\n\r"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingTop = "5dp"
                android:text=""
                android:background="@drawable/rounded_rectangle"
                android:id="@+id/inter2"/>
            <EditText
                android:layout_marginLeft="10dp"
                android:digits="1234567890.\n\r"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingTop = "5dp"
                android:text=""
                android:background="@drawable/rounded_rectangle"
                android:id="@+id/inter3"/>

            <EditText
                android:id="@+id/inter4"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rounded_rectangle"
                android:digits="1234567890:\n\r"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:text=""
                android:selectAllOnFocus="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="75dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/device_port"/>
            <EditText
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:selectAllOnFocus="true"
                android:inputType="number"
                android:maxLines="1"
                android:paddingTop = "5dp"
                android:text=""
                android:background="@drawable/rounded_rectangle"
                android:id="@+id/port"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="75dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/org_name"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btu"
                android:textColor="@color/white"
                android:text="@string/btu_save"
                android:id="@+id/btu_save"/>
            <Button
                android:id="@+id/btu_tts"
                android:layout_width="100dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/rounded_btu"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/btu_tts" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="75dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/switch_text"/>
            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/time_text"
                android:textColor="#6B151212"
                android:id="@+id/switch_text"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>